fix: Patch missing on mobile

--- a/src/components/atomes/Navigation/style.scss
+++ b/src/components/atomes/Navigation/style.scss
@@ -48,7 +48,7 @@
         a {
           font-family: "Satoshi";
           font-weight: 600;
-          font-size: 14px;
+          font-size: 8px;
           text-transform: uppercase;
 
           &:hover {
@@ -65,7 +65,7 @@
       > a, > button {
         border: none;
         outline: none;
-        font-size: 14px;
+        font-size: 12px;
         text-decoration: none;
         padding: 15px;
         text-align: center;
